Make Applicatoins take a list of scope uuids and only allow values that are associated with the AuthorizationServer.
